[package]
name = "flechasdb"
version = "0.1.0"
edition = "2021"
default-run = "flechasdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
futures = { version = "0.3", default-features = false, features = ["alloc", "std"] }
pin-project-lite = "0.2"
protobuf = "3.2"
rand = "0.8"
ring = "0.16"
tempfile = "3.8"
tokio = { version = "1.32", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
uuid = { version = "1.4", features = ["v4"] }

[build-dependencies]
protobuf-codegen = "3.2"
protoc-bin-vendored = "3.0"
